--- a/slides/cap_nb.tex
+++ b/slides/cap_nb.tex
@@ -197,7 +197,6 @@ f(x) = \arg\max_y p(y|x) &= \arg\max_y \frac{p(y)p(x|y)}{p(x)} \\
 
 
 \section{Naive Bayes Classifier}
-\scriptsize
 \begin{itemize}
     \item MAP stands for "maximum a posteriori," which represents the most likely class:
     \[
@@ -604,7 +603,7 @@ F_1 = \frac{2PR}{P + R}
 \includegraphics[scale = 0.23]{pics/devsets.png}
 \end{figure}
 
-\begin{itemize}\scriptsize
+\begin{itemize}
 \item \textbf{Training set}: Used to train the model.
 \item \textbf{Devset}: Used to tune the model and select the best hyperparameters.
 \item \textbf{Testset}: Used to report the final performance of the model.
