--- a/slides/apunte.tex
+++ b/slides/apunte.tex
@@ -105,9 +105,41 @@
 \label{cap_redes}
 \input{cap_redes}
 
+\chapter{Vectores de Palabra}
+\label{cap_embeddings}
+\input{cap_embeddings}
 
 
 
+
+
+\chapter{Etiquetado de Secuencias y Cadenas de Markov Ocultas}
+\label{cap_hmm}
+\input{cap_hmm}
+
+\chapter{Modelos de Markov de Máxima Entropía y Condtional Random Fields}
+\label{cap_crf}
+\input{cap_crf}
+
+\chapter{Redes Neuronales Convolucionales}
+\label{cap_cnn}
+\input{cap_cnn}
+
+\chapter{Redes Neuronales Recurrentes}
+\label{cap_rnn}
+\input{cap_rnn}
+
+\chapter{Modelos Secuencia a Secuencia y Atención Neuronal}
+\label{cap_sec}
+\input{cap_sec}
+
+\chapter{Arquitectura de Transformer}
+\label{cap_trans}
+\input{cap_trans}
+
+\chapter{Vectores de Palabra Contextualizados y Grandes Modelos de Lenguaje}
+\label{cap_llm}
+\input{cap_llm}
 
 \bibliography{bio}
 \bibliographystyle{apalike}
